# AuctionDataCollector

./: .gitignore  AuctionDataCollector.cabal  AuctionParser-exe.ps  AuctionParser.cabal  README.md  example.config.cfg  items.json  items.txt  realms.json  realms.txt  result.txt  stack.yaml
app/: ItemEditor.hs  Main.hs
migrations/: 20170821203145_init.sql  20170903124632_add_profession_type_and_column_in_items.sql
src/: ADCOptions.hs  Config.hs  DB.hs  Lib.hs  Types.hs
src/ADC/: Config.hs  DB.hs  Lib.hs  Options.hs
src/ADC/Types/: Locale.hs  Types.hs
src/Types/: Locale.hs  Types.hs
