name:                AuctionDataCollector
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/gore-v/AuctionDataCollector#readme
license:             BSD3
license-file:        LICENSE
author:              Vasily Gorev
maintainer:          v@gorev.one
copyright:           2016 Vasily Gorev
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      ,Types.Types
                      ,Types.Locale
                      ,DB
                      ,Config
  build-depends:       base >= 4.7 && < 5
                      ,text
                      ,bytestring
                      ,aeson
                      ,containers
                      ,http-conduit
                      ,http-client
                      ,resourcet
                      ,comonad
                      ,time
                      ,old-locale
                      ,transformers
                      ,monad-parallel
                      ,parallel
                      ,stm
                      ,async
                      ,postgresql-simple
                      ,postgresql-simple-migration
                      ,configurator
                      ,invertible-syntax
                      ,unordered-containers
                      ,resource-pool
                      
  default-language:    Haskell2010

executable ADC
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AuctionDataCollector
                     , resource-pool
  default-language:    Haskell2010

test-suite ADC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AuctionDataCollector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gore-v/AuctionDataCollector
